--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,11 +1,14 @@
-<h2>Sign up</h2>
+<h2>Sign up: Required information</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
-
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, autofocus: true %></div>
-
+  <% if (resource == nil || resource == []) || session["devise.user_attributes"] == nil%>
+    <div><%= f.label :email %><br />
+    <%= f.email_field :email, autofocus: true %></div>
+  <% else %>
+    Welcome ! <%= session["devise.user_attributes"]["username"] %>
+    <%= f.hidden_field :email, :value => session["devise.user_attributes"]["email"] %>
+  <% end %>
   <div><%= f.label :password %> <% if @validatable %><i>(<%= @minimum_password_length %> characters minimum)</i><% end %><br />
     <%= f.password_field :password, autocomplete: "off" %></div>
 
