Add initial friendly forwarding (still need to test thoroughly. ) When create rating on movies#show will now use ajax to insert rating on page

--- a/app/views/movies/_movie_rating.html.erb
+++ b/app/views/movies/_movie_rating.html.erb
@@ -1,12 +1,18 @@
 <%= form_for(movie.ratings.build, remote: true) do |f| %>
   <%= f.hidden_field :movie_id, value: movie.id %>
   <%= f.hidden_field :user_id, value: current_user.id %>
+  <div id="movie_review_label">
   <%= f.label "Review" %>
+  </div>
+  <div id="movie_review">
   <%= f.text_area :review %> 
-  <% i = 0 %>
-  <% while(i < 10) %>
-    <a class="star_<%i%>"><img src="assets/greystar.png"/></a>
-    <% i += 1 %>
-  <% end %>
+  </div>
+  <div id="movie_rating_label">
+  <%= f.label "Rating"%>
+  </div>
+  <div id="movie_rating_stars">
+  <%= f.text_field :stars, value: 0 %>
+  </div>
   <%= f.submit %>
 <% end %>
+
