--- a/app/views/ratings/_form.html.erb
+++ b/app/views/ratings/_form.html.erb
@@ -24,8 +24,8 @@
     <%= f.text_area :review %>
   </div>
   <div class="field">
-    <%= f.label :value %><br>
-    <%= f.text_field :value %>
+    <%= f.label :stars %><br>
+    <%= f.text_field :stars %>
   </div>
   <div class="field">
     <%= f.label :review_present %><br>
