--- a/app/views/ratings/index.html.erb
+++ b/app/views/ratings/index.html.erb
@@ -6,7 +6,7 @@
       <th>User</th>
       <th>Movie</th>
       <th>Review</th>
-      <th>Value</th>
+      <th>Stars</th>
       <th>Review present</th>
       <th colspan="3"></th>
     </tr>
@@ -18,7 +18,7 @@
         <td><%= rating.user_id %></td>
         <td><%= rating.movie_id %></td>
         <td><%= rating.review %></td>
-        <td><%= rating.value %></td>
+        <td><%= rating.stars %></td>
         <td><%= rating.review_present %></td>
         <td><%= link_to 'Show', rating %></td>
         <td><%= link_to 'Edit', edit_rating_path(rating) %></td>
