Added slugs to actors/directors/genres/movies/movie_ratings. Added some friendly forwarding in the case of destroying a rating. User can choose a unique chosen_name to use as their user name.

--- a/app/views/ratings/create.js.erb
+++ b/app/views/ratings/create.js.erb
@@ -1,4 +1,4 @@
-<% @rating = Rating.where('user_id' => 4, 'movie_id' => 3).first %>
+<% @rating = Rating.where('user_id' => params[:rating][:user_id], 'movie_id' => params[:rating][:movie_id]).first %>
 
 
 $(function(){
