Indexed models. Enforced validations of uniqueness for directors/actors on first/last/birthday||stage_name, genres on name, movies on name/opening_day, (users already unique by email, and chosen_name), spoilers on movie, rating on user/movie. Todo: version control for spoilers

--- a/app/views/actors/show.html.erb
+++ b/app/views/actors/show.html.erb
@@ -1,5 +1,7 @@
 <p id="notice"><%= notice %></p>
-
+<% if @actor.stage_name %>
+  Also known as <%= @actor.stage_name %>
+<% end %>
 <p>
   <strong>First:</strong>
   <%= @actor.first %>
@@ -8,16 +10,6 @@
 <p>
   <strong>Last:</strong>
   <%= @actor.last %>
-</p>
-
-<p>
-  <strong>Slug:</strong>
-  <%= @actor.slug %>
-</p>
-
-<p>
-  <strong>Approved:</strong>
-  <%= @actor.approved %>
 </p>
 
 <p>
