--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -13,7 +13,7 @@
   <%= f.hidden_field :user_id, value: current_user.id %>
   <div class="field">
     <%= f.label :name %><br>
-    <%= f.text_field :name %>
+    <%= f.text_field :name, :autofocus => true %>
   </div>
   <div class="field">
     <%= f.label :opening_day %><br>
