--- a/app/views/actors/index.html.erb
+++ b/app/views/actors/index.html.erb
@@ -3,10 +3,9 @@
 <table>
   <thead>
     <tr>
+      <th>Stage Name</th>
       <th>First</th>
       <th>Last</th>
-      <th>Slug</th>
-      <th>Approved</th>
       <th>Birthday</th>
       <th colspan="3"></th>
     </tr>
@@ -15,10 +14,9 @@
   <tbody>
     <% @actors.each do |actor| %>
       <tr>
+        <td>actor.stage_name</td>
         <td><%= actor.first %></td>
         <td><%= actor.last %></td>
-        <td><%= actor.slug %></td>
-        <td><%= actor.approved %></td>
         <td><%= actor.birthday %></td>
         <td><%= link_to 'Show', actor %></td>
         <td><%= link_to 'Edit', edit_actor_path(actor) %></td>
