--- a/app/views/directors/show.html.erb
+++ b/app/views/directors/show.html.erb
@@ -1,4 +1,8 @@
 <p id="notice"><%= notice %></p>
+<p>
+  <strong>Nickname/Stage Name</strong>
+  <%= @director.stage_name %>
+</p>
 
 <p>
   <strong>First:</strong>
@@ -10,10 +14,6 @@
   <%= @director.last %>
 </p>
 
-<p>
-  <strong>Slug:</strong>
-  <%= @director.slug %>
-</p>
 
 <p>
   <strong>Approved:</strong>
