--- a/app/views/spoilers/show.html.erb
+++ b/app/views/spoilers/show.html.erb
@@ -1,18 +1,10 @@
-
-<p>
-  <strong>Movie:</strong>
-  <%= @spoiler.movie_id %>
-</p>
-
-<p>
-  <strong>User:</strong>
-  <%= @spoiler.user_id %>
-</p>
-
+<div id="spoiler_movie_name">
+  Synopsis for: <%= link_to @movie.name, @movie  %>
+</div>
 <p>
   <strong>Synopsis:</strong>
   <%= @spoiler.synopsis %>
 </p>
 
-<%= link_to 'Edit', edit_spoiler_path(@spoiler) %> |
+<%= link_to 'Edit', edit_spoiler_path(@spoiler.id) %> |
 <%= link_to 'Back', spoilers_path %>
