--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <%= Time.now.strftime("%A, %B %e, %Y") %>
   <% if user_signed_in? %>
     Signed in as <%= current_user.email %>. Not you?
     <%= link_to 'Sign out', destroy_user_session_path,:method => :delete %>
