--- a/app/views/spoilers/_form.html.erb
+++ b/app/views/spoilers/_form.html.erb
@@ -10,15 +10,8 @@
       </ul>
     </div>
   <% end %>
-
-  <div class="field">
-    <%= f.label :movie_id %><br>
-    <%= f.number_field :movie_id %>
-  </div>
-  <div class="field">
-    <%= f.label :user_id %><br>
-    <%= f.number_field :user_id %>
-  </div>
+  <%= f.hidden_field :movie_id, value: session[:movie_id] %>  
+  <%= f.hidden_field :user_id, value: current_user.id %>
   <div class="field">
     <%= f.label :synopsis %><br>
     <%= f.text_area :synopsis %>
