--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Canyon</title>
+  <title>The Timely Post</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -19,10 +19,10 @@
     <%= link_to "Sign in with Google", user_omniauth_authorize_path(:google_oauth2)%>
     <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>
   <% end %>
+<h1>The Timely Post </h1>
   <% flash.each do |key, value| %>
     <div class="alert alert-<%= key %>"><%= raw value %></div>
   <% end %>
-
 <%= yield %>
 
 <script type="text/javascript">
