--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,4 +1,3 @@
-<h1>Movie Quibbler</h1>
 <%= link_to 'New Movie', new_movie_path %>
 <% i = 1 %>
 <% @movies.each do |movie| %>
@@ -27,5 +26,6 @@
 <% end %>
 
 <br>
-
-<%= link_to 'New Movie', new_movie_path %>
+<% if i > 2 %>
+  <%= link_to 'New Movie', new_movie_path %>
+<% end %>
