--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,18 +7,20 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <div class="sign_in_box">
-    <% if user_signed_in? %>
-      Signed in as <%= current_user.email %>. Not you?
-      <%= link_to 'Sign out', destroy_user_session_path,:method => :delete %>
-      <%= link_to "Settings", edit_user_registration_path %>
-      <%= link_to "Profile", user_path(current_user) %>
-    <% else %>
-      <%= link_to 'Register', new_user_registration_path %> or
-      <%= link_to 'Sign in', new_user_session_path %>
-      <%= link_to "Sign in with Google", user_omniauth_authorize_path(:google_oauth2)%>
-      <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>
-    <% end %>
+  <div class="sign_in_box_wrapper">
+    <div class="sign_in_box">
+      <% if user_signed_in? %>
+        Signed in as <%= current_user.email %>. Not you?
+        <%= link_to 'Sign out', destroy_user_session_path,:method => :delete %>
+        <%= link_to "Settings", edit_user_registration_path %>
+        <%= link_to "Profile", user_path(current_user) %>
+      <% else %>
+        <%= link_to 'Register', new_user_registration_path %> or
+        <%= link_to 'Sign in', new_user_session_path %>
+        <%= link_to "Sign in with Google", user_omniauth_authorize_path(:google_oauth2)%>
+        <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>
+      <% end %>
+    </div>
   </div>
 <div class="header_box">
   <h1 id="header_logo">The Timely Post </h1>
