Replaced h1 header with our img logo

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
     </div>
   </div>
 <div class="header_box">
-  <h1 id="header_logo">The Timely Post </h1>
+  <%= image_tag("the-timely-post-logo.png") %>
   <div id="mono_time"><%= Time.now.strftime("%A, %B %e, %Y") %></div>
 </div>
 <div class="header_nav_list">
