Updated #main_content width

--- a/app/assets/stylesheets/home_style.css.scss
+++ b/app/assets/stylesheets/home_style.css.scss
@@ -19,8 +19,8 @@
 
 
 .header_nav_list {
-  width:90%;
-  margin-left: 5%;
+  width:96%;
+  margin-left: 2%;
   height:2em;
   
 }
@@ -32,4 +32,9 @@
 
 #nav_li:hover {
   background: #dddddd;
+}
+
+#main_content {
+  width: 96%;
+  margin-left: 2%;
 }
