--- a/app/views/actors/index.html.erb
+++ b/app/views/actors/index.html.erb
@@ -1,11 +1,10 @@
-<h1>Listing actors</h1>
-
+<h1>Actors</h1>
+<%= link_to 'New Actor', new_actor_path %>
 <table>
   <thead>
     <tr>
       <th>Stage Name</th>
-      <th>First</th>
-      <th>Last</th>
+      <th>Name</th>
       <th>Birthday</th>
       <th colspan="3"></th>
     </tr>
@@ -14,13 +13,14 @@
   <tbody>
     <% @actors.each do |actor| %>
       <tr>
-        <td>actor.stage_name</td>
-        <td><%= actor.first %></td>
-        <td><%= actor.last %></td>
+        <td><% if actor.stage_name != "" %><%= actor.stage_name %><% end %></td>
+        <td><%= actor.first %> <%= actor.last %></td>
         <td><%= actor.birthday %></td>
         <td><%= link_to 'Show', actor %></td>
+  <% if user_signed_in? %>
         <td><%= link_to 'Edit', edit_actor_path(actor) %></td>
         <td><%= link_to 'Destroy', actor, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+  <% end %>
       </tr>
     <% end %>
   </tbody>
