--- a/app/views/directors/index.html.erb
+++ b/app/views/directors/index.html.erb
@@ -4,9 +4,10 @@
   <thead>
     <tr>
       <th>Nickname/Stage Name</th>
-      <th>First</th>
-      <th>Last</th>
+      <th>Name</th>
+    <% if current_user.try(:admin?) %>
       <th>Approved</th>
+    <% end %>
       <th>Birthday</th>
       <th colspan="3"></th>
     </tr>
@@ -16,13 +17,16 @@
     <% @directors.each do |director| %>
       <tr>
         <td><%= director.stage_name %></td>
-        <td><%= director.first %></td>
-        <td><%= director.last %></td>
+        <td><%= director.first %> <%= director.last %></td>
+      <% if current_user.try(:admin?) %>
         <td><%= director.approved %></td>
+      <% end %>
         <td><%= director.birthday %></td>
         <td><%= link_to 'Show', director %></td>
+      <% if user_signed_in? %>
         <td><%= link_to 'Edit', edit_director_path(director) %></td>
         <td><%= link_to 'Destroy', director, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+     <% end %>
       </tr>
     <% end %>
   </tbody>
@@ -30,4 +34,6 @@
 
 <br>
 
-<%= link_to 'New Director', new_director_path %>
+<% if user_signed_in? %>
+  <%= link_to 'New Director', new_director_path %>
+<% end %>
