--- a/app/views/directors/show.html.erb
+++ b/app/views/directors/show.html.erb
@@ -1,29 +1,27 @@
 <p id="notice"><%= notice %></p>
+<% if @director.stage_name != nil && !!@director.stage_name.match(/[^\s]/) %>
 <p>
   <strong>Nickname/Stage Name</strong>
   <%= @director.stage_name %>
 </p>
-
+<% end %>
 <p>
-  <strong>First:</strong>
-  <%= @director.first %>
+  <%= @director.first %> <%= @director.last %>
 </p>
 
-<p>
-  <strong>Last:</strong>
-  <%= @director.last %>
-</p>
-
-
+<% if current_user.try(:admin?) %>
 <p>
   <strong>Approved:</strong>
   <%= @director.approved %>
 </p>
+<% end %>
 
 <p>
   <strong>Birthday:</strong>
   <%= @director.birthday %>
 </p>
 
-<%= link_to 'Edit', edit_director_path(@director) %> |
+<% if user_signed_in? %>
+  <%= link_to 'Edit', edit_director_path(@director) %> |
+<% end %>
 <%= link_to 'Back', directors_path %>
