--- a/app/views/genres/show.html.erb
+++ b/app/views/genres/show.html.erb
@@ -1,10 +1,10 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Name:</strong>
   <%= @genre.name %>
 </p>
 
-
-<%= link_to 'Edit', edit_genre_path(@genre) %> |
+<% if current_user.try(:admin?) %>
+  <%= link_to 'Edit', edit_genre_path(@genre) %> |
+<% end %>
 <%= link_to 'Back', genres_path %>
