--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -17,9 +17,11 @@
       <% end %>
     </div>
     <div id="movie_links">
-      <%= link_to 'Show', movie %>
-      <%= link_to 'Edit', edit_movie_path(movie) %>
-      <%= link_to 'Destroy', movie, method: :delete, data: { confirm: 'Are you sure?' } %>
+      <%= link_to 'See More', movie %>
+      <% if user_signed_in? %>
+        <%= link_to 'Edit', edit_movie_path(movie) %>
+      <% end %>
+      <%= link_to 'Flag', movie, method: :delete, data: { confirm: 'Are you sure?' } %>
     </div>
   </div>
   <% i += 1 %>
