--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -43,6 +43,8 @@ Posted by <%= link_to @movie.user.chosen_name, @movie.user %>
  <%= render @ratings %>
 </div>
 <div id="movie_links">
-  <%= link_to 'Edit', edit_movie_path(@movie) %> |
+  <% if user_signed_in? %>
+    <%= link_to 'Edit Movie Data', edit_movie_path(@movie) %> |
+  <% end %>
   <%= link_to 'Back', movies_path %>
 </div>
