--- a/app/assets/stylesheets/home_style.css.scss
+++ b/app/assets/stylesheets/home_style.css.scss
@@ -1,3 +1,4 @@
+/******** Layout ***********/
 .sign_in_box_wrapper {
   width: 100%;
   height: 1.5em;
@@ -39,4 +40,29 @@
 #main_content {
   width: 96%;
   margin-left: 2%;
+}
+
+/********Home Page ***************/
+div#movies_list {
+  padding-left: 12px;
+  padding-bottom: 15px;
+  width: 30%;
+  border-right: 1px solid grey;
+  border-bottom: 1px solid grey;
+  
+}
+div#movie_box {
+  padding-right: 15px;
+  padding-bottom: 12px;
+  margin-bottom: 5px;
+  width: 300px;
+  border: 0 0 0 1px solid black;
+}
+#movie_box_name > a  {
+  color: black;
+  text-decoration: none;
+  font-weight: bold;
+  .hover {
+    
+  }
 }
