--- a/app/views/ratings/_rating.html.erb
+++ b/app/views/ratings/_rating.html.erb
@@ -1,4 +1,4 @@
-<div id="rating_<%=rating.id%>">
+<div id="past_reviews_<%=rating.id%>">
   <div id="rating_stars">
   Stars:  <%= rating.stars %>
   </div>
