--- a/app/assets/stylesheets/ratings.css.scss
+++ b/app/assets/stylesheets/ratings.css.scss
@@ -2,5 +2,9 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 #rating_review {
-  width: 800px;
+  width: 90%;
+}
+div[id*='past_reviews_'] {
+  padding: 10px 10px 10px 10px;
+  border-bottom: 1px solid grey;
 }
