Display movie reviews in simple_format to show newlines

--- a/app/views/ratings/_rating.html.erb
+++ b/app/views/ratings/_rating.html.erb
@@ -4,7 +4,7 @@
   </div>
   <div id="review">
   Review:<br>
-    <%= rating.review %>
+    <%= simple_format h rating.review %>
   </div>
   <div id="rating_info">
     <%= rating.created_at %> 
